<resources>
    <string name="app_name">ISP</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="rememberMe">Remember me</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="create_new_account">Create a new account</string>
    <string name="username">Username</string>
    <string name="retype_password">Retype password</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="phone_number_confirmation">phone number confirmation</string>
    <string name="title_activity_near_by_isp">Map</string>
    <string name="your_request_is_pending">request is pending</string>
    <string name="email_address">Email address</string>
    <string name="home_page">Home</string>
    <string name="reset_password">Reset password</string>
    <string name="account_info">Account information</string>
    <string name="add_payment_card">Add payment card</string>
    <string name="choose_payment_type">Choose payment type</string>
    <string name="notification_control">Notification control</string>
    <string name="available_subscriptions">Available subscriptions</string>
    <string name="near_by_isp">Near by providers</string>
    <string name="next">Next</string>
    <string name="update">Update</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="iraqi_dinar">\u0020 Iraqi dinar \u0020</string>
    <string name="subscription_info">subscription info.</string>
    <string name="subscription_type">Subscription type</string>
    <string name="subscription_price">Subscription price</string>
    <string name="office_name">Office name</string>
    <string name="bridge_name">Bridge name</string>
    <string name="day"> Days</string>
    <string name="expiration_at">Expiration at</string>
    <string name="options">Options</string>
    <string name="offers">Offers</string>
    <string name="review_subscription_offers">Review subscription offers</string>
    <string name="your_subscription">You Subscription</string>
    <string name="control_your_subscription">Control your subscription type</string>
    <string name="control_your_account_information">Control your account information</string>
    <string name="notifications">Notifications</string>
    <string name="control_notification">Control notification</string>
    <string name="logout">Logout</string>
    <string name="no_connection">No connection</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="there_s_no_available_offers">There\'s no available offers</string>
    <string name="change_your_password">Change your password</string>
    <string name="subscription_notification">Subscription notifications</string>
    <string name="app_notifications">App notifications</string>
    <string name="password_should_contains_combination_of_8_numbers_letters">Password should contains combination of 8 numbers,letters</string>
    <string name="please_enter_a_valid_number">Please enter a valid phone number</string>
    <string name="login_successed">Login successed</string>
    <string name="invalid_credentials">Invalid Credentialls</string>
    <string name="connection_error">Connection error</string>
    <string name="passwrods_dont_match">Passwords don\'t match</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="signing_in">Signing in</string>
    <string name="signing_up">Siging in</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="you_need_to_give_location_permission_from_settings_to_use_this_feature">You need to give location permission from settings to use this feature</string>
    <string name="you_need_to_activate_location_permission_to_use_this_feature">You need to activate location permission to use this feature</string>
    <string name="you_dont_have_subscription_yet">You don\'t have subscription yet</string>
    <string name="warning">Warning</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="password_has_been_updated_successfully">Password has been updated successfully</string>
    <string name="alert">Alert</string>
    <string name="Are_you_sure_you_want_to_subscribe_to_this_ISP">Are you sure you want to subscribe to this ISP</string>
    <string name="error_snackbar">Error Snackbar</string>


</resources>
