<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userModel"
            type="com.example.ispmvvm.models.User" />

        <variable
            name="viewModel"
            type="com.example.ispmvvm.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"

        android:orientation="vertical"
        tools:context=".login.LoginActivity">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_xxxlarge"

            >

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />


        </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="@dimen/spacing_large"
            android:hint="@string/phone_number"
            android:textColorHint="@color/grey_600"




            android:theme="@style/EditText.White"
            app:hintAnimationEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:gravity="start"
                android:paddingTop="6dp"

                android:text='@={userModel.login}'
                android:textColor="@android:color/black"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large"

            android:hint="@string/password"
            android:textColorHint="@color/grey_600"


            android:theme="@style/EditText.White"
            app:hintAnimationEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingTop="6dp"
                android:text='@={userModel.password}'
                android:textColor="@android:color/black"


                android:textDirection="locale" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/spacing_large"
                android:textColor="@color/blue_600"
                android:checked="true"
                android:textStyle="bold"
                android:theme="@style/Checkbox.Blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/checkbox"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_toStartOf="@+id/checkbox"

                android:text="@string/rememberMe"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/checkbox"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_medium"

                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgot_password"
                android:textColor="@color/blue_900"
                android:textStyle="bold" />
        </RelativeLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="@dimen/spacing_large"

            android:backgroundTint="@color/blue_900"
            android:onClick="@{v->viewModel.doLogin(v,userModel)}"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:clickable="true"

                android:layout_toEndOf="@id/tv_dontHaveAccount"

                android:focusable="true"
                android:text="@string/create_new_account"
                android:textColor="@color/blue_900"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_dontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/spacing_large"


                android:layout_marginEnd="@dimen/spacing_medium"
                android:text="@string/dont_have_account"
                android:textStyle="bold" />

        </RelativeLayout>


    </LinearLayout>
</layout>